--- a/index.html
+++ b/index.html
@@ -6,11 +6,44 @@
         <title>Pomodoro Clock</title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="http://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" type="text/css">
+        <link href='https://fonts.googleapis.com/css?family=Quicksand:300' rel='stylesheet' type='text/css'>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-       
+     
+  
+ <div class="container"> 
+    <p id="main-heading" class="animated rubberBand">Pomodoro Clock</p>
+
+  <div class="outer">
+    <div class="middle">
+      <div class="inner">
+        <img class="animated bounceInDown clock-image" src="http://www.cliparthut.com/clip-arts/168/tomato-clip-art-168823.png" alt="Logo"/>
+        <p class="clock-text"><strong>Session</strong></p>
+        <span class="clock-time">25:00</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="row button-container">
+    <div class="col col-lg-5 col-md-5 col-sm-5 col-xs-5">
+      <span class="button-heading"><strong>Break Length</strong></span>
+       <p><button class="break-min"><i class="fa fa-minus"></i></button><span class="time break-time">5</span><button class="break-plus"><i class="fa fa-plus"></i></button></p>
+    </div>
+    <div class="col col-lg-2 col-md-2 col-sm-2 col-xs-2">
+      <button class="ctrl btn btn-success btn-lg">Start</button>
+    </div>
+    <div class="col col-lg-5 col-md-5 col-sm-5 col-xs-5">
+       <span class="button-heading"><strong>Session Length<strong></span>
+       <p><button class="session-min"><i class="fa fa-minus"></i></button><span class="time session-time">25</span><button class="session-plus"><i class="fa fa-plus"></i></button></p>   
+     </div>
+         </div>
+      <footer>
+      <p class="footer"><strong>Coded with</strong> <i class="fa fa-heart icon" aria-hidden="true"></i> <em>By </em><a href="https://forum.freecodecamp.com/u/SurendraVidiyala/activity" target="_blank"><strong>Surendra Vidiyala</strong></a>.</p>
+      </footer>
+</div> <!--End Container-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
